--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,14 +1,14 @@
 @import "../utils/variables";
 
-.header-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  height: 80px;
-  padding-right: 27px;
-  margin: auto;
-}
+// .header-container {
+//   display: flex;
+//   flex-direction: row;
+//   align-items: center;
+//   height: 80px;
+//   padding-right: 27px;
+//   margin: auto;
+// }
 
-.header-bottomline {
-  border-bottom: 1px solid $headline-bottom-line;
-}
+// .header-bottomline {
+//   border-bottom: 1px solid $headline-bottom-line;
+// }
