--- a/css/main.css
+++ b/css/main.css
@@ -18,36 +18,24 @@ body {
 }
 
 .container {
-  width: 1200px;
-  margin: 0 auto;
+  max-width: 480px;
   padding: 0 15px;
-}
-
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
-.header-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  margin: 0 auto;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 80px;
-  padding-right: 27px;
-  margin: auto;
 }
 
-.header-bottomline {
-  border-bottom: 1px solid #ececec;
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 480px;
+    padding: 0 15px;
+    margin: 0 auto;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
-
 .logo {
   font-family: "Raleway", sans-serif;
   text-decoration: none;
@@ -156,8 +144,9 @@ body {
 
 .banner {
   background-color: #2f303a;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/img-background.jpg);
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-background.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/img-background-mobile@1x.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-background-mobile@1x.jpg);
+  background-size: contain;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -174,19 +163,8 @@ body {
   margin: 0 auto;
   padding: 0;
   width: 100%;
-  max-width: 1600px;
-}
-.banner__title {
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36em;
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  color: white;
-  padding-top: 200px;
-  padding-left: 252px;
-  padding-right: 252px;
+  height: 400px;
+  max-width: 480px;
 }
 
 .button {
@@ -331,106 +309,17 @@ body {
 
 .lorem {
   list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   gap: 30px;
   padding-bottom: 0;
 }
 .lorem__icon {
-  width: 270px;
-  height: 120px;
+  width: 70px;
+  height: 70px;
+  padding: 25px 190px;
   background-color: #f5f4fa;
-  padding: 25px 100px;
-}
-.lorem__text {
-  font-size: 14px;
-  line-height: 1.5em;
-  letter-spacing: 0.03em;
-  margin: 0;
-  color: #757575;
-}
-
-.work {
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin: 0 auto;
-  gap: 30px;
-}
-
-.work__img {
-  position: relative;
-  z-index: 1;
-}
-.work__img > .work__label {
-  text-transform: uppercase;
   text-align: center;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1em;
-  letter-spacing: 0.03em;
-  color: white;
-  position: absolute;
-  top: 226px;
-  margin: 0;
-  background: rgba(47, 48, 58, 0.8);
-  z-index: 2;
-}
-.work__img > .work__label--1 {
-  padding: 27px 90px;
-}
-.work__img > .work__label--2 {
-  padding: 27px 113px;
-  white-space: nowrap;
-}
-.work__img > .work__label--3 {
-  padding: 27px 94px;
-}
-
-.team {
-  background-color: #f5f4fa;
   width: 100%;
-}
-.team__list {
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  gap: 30px;
-}
-.team__item {
-  margin: 0 auto;
-  background-color: white;
-}
-.team__img {
-  margin: 0 auto;
-  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
-.team__job {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.1875em;
-  text-align: center;
-  letter-spacing: 0.03em;
-  margin: 0 auto;
-  padding-bottom: 30px;
-  color: #757575;
+  height: 120px;
 }
 
 /* SOCIALS team & footer */
@@ -593,64 +482,6 @@ body {
   padding: 0%;
   position: relative;
   z-index: 2;
-}
-
-.clients {
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 30px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.clients__link {
-  border: 1px solid #afb1b8;
-  fill: #afb1b8;
-  border-radius: 4px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 170px;
-  height: 92px;
-  -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.clients__link:hover, .clients__link:focus-within {
-  fill: #2196f3;
-  border-color: #2196f3;
-}
-
-.footer {
-  background-color: #2f303a;
-  padding: 60px 0;
-}
-.footer__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
-}
-.footer__info {
-  margin-right: 70px;
-}
-.footer__address {
-  font-style: normal;
-  font-size: 14px;
-  letter-spacing: 0.03em;
-  margin-top: 20px;
-  color: white;
-  white-space: nowrap;
 }
 
 .backdrop {
