--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -1,9 +1,12 @@
 @import "../utils/variables";
 
+//MOBILE
+
 .banner {
   background-color: $mainheadline-footer-color;
   background-image: linear-gradient($gradient, $gradient),
-    url(../images/img-background.jpg);
+    url(../images/img-background-mobile@1x.jpg);
+  background-size: contain;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -11,18 +14,33 @@
   margin: 0 auto;
   padding: 0;
   width: 100%;
-  max-width: 1600px;
-
-  &__title {
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36em;
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    color: $button-text-color;
-    padding-top: 200px;
-    padding-left: 252px;
-    padding-right: 252px;
-  }
+  height: 400px;
+  max-width: 480px;
 }
+
+// .banner {
+//   background-color: $mainheadline-footer-color;
+//   background-image: linear-gradient($gradient, $gradient),
+//     url(../images/img-background@1x.jpg);
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+//   margin: 0 auto;
+//   padding: 0;
+//   width: 100%;
+//   max-width: 1600px;
+
+//   &__title {
+//     font-weight: 900;
+//     font-size: 44px;
+//     line-height: 1.36em;
+//     text-align: center;
+//     letter-spacing: 0.06em;
+//     text-transform: uppercase;
+//     color: $button-text-color;
+//     padding-top: 200px;
+//     padding-left: 252px;
+//     padding-right: 252px;
+//   }
+// }
