--- a/sass/components/_lorem.scss
+++ b/sass/components/_lorem.scss
@@ -1,23 +1,41 @@
 @import "../utils/variables";
 
+//MOBILE
+
 .lorem {
   list-style: none;
-  display: flex;
   gap: 30px;
   padding-bottom: 0;
 
-&__icon {
-  width: 270px;
-  height: 120px;
-  background-color: $alternative-button-background-color;
-  padding: 25px 100px;
+  &__icon {
+    width: 70px;
+    height: 70px;
+    padding: 25px 190px;
+    background-color: $alternative-button-background-color;
+    text-align: center;
+    width: 100%;
+    height: 120px;
+  }
 }
 
-&__text {
-  font-size: 14px;
-  line-height: 1.5em;
-  letter-spacing: 0.03em;
-  margin: 0;
-  color: $contactncontent-text-color;
-}
-}
+// .lorem {
+//   list-style: none;
+//   display: flex;
+//   gap: 30px;
+//   padding-bottom: 0;
+
+// &__icon {
+//   width: 270px;
+//   height: 120px;
+//   background-color: $alternative-button-background-color;
+//   padding: 25px 100px;
+// }
+
+// &__text {
+//   font-size: 14px;
+//   line-height: 1.5em;
+//   letter-spacing: 0.03em;
+//   margin: 0;
+//   color: $contactncontent-text-color;
+// }
+// }
