--- a/sass/components/_resets.scss
+++ b/sass/components/_resets.scss
@@ -9,13 +9,32 @@
 
 // Container for header, body and footer 
 
-.container {
-  width: 1200px;
-  margin: 0 auto;
+//MOBILE 480
+
+.container {    
+  max-width: 480px;
   padding: 0 15px;
+  margin: 0 auto;
+  align-items: center;
 }
 
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 480px;
+  padding: 0 15px;
+  margin: 0 auto;
+  align-items: center;
+  }
 }
+
+//DESKTOP
+// .container {
+//   width: 1200px;
+//   margin: 0 auto;
+//   padding: 0 15px;
+// }
+
+// .section {
+//   padding-top: 94px;
+//   padding-bottom: 94px;
+// }
