--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ body {
   font-weight: 400;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  max-width: 480xp;
   width: 100%;
   margin: 0 auto;
   padding: 0;
@@ -26,6 +27,12 @@ body {
           align-items: center;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 @media screen and (min-width: 768px) {
   .container {
     max-width: 480px;
@@ -36,11 +43,30 @@ body {
             align-items: center;
   }
 }
+.header-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 60px;
+  margin: auto;
+}
+
+.header-bottomline {
+  border-bottom: 1px solid #ececec;
+}
+
 .logo {
   font-family: "Raleway", sans-serif;
   text-decoration: none;
   font-weight: 700;
-  font-size: 26px;
+  font-size: 24px;
   line-height: 1.9375em;
   letter-spacing: 0.03em;
   color: #2196f3;
@@ -59,6 +85,7 @@ body {
   list-style: none;
   gap: 46px;
   margin-left: 93px;
+  visibility: hidden;
 }
 
 .nav__link {
@@ -91,6 +118,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  visibility: hidden;
 }
 .contact__icon {
   margin-right: 10px;
@@ -147,30 +175,29 @@ body {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/img-background-mobile@1x.jpg);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-background-mobile@1x.jpg);
   background-size: contain;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   margin: 0 auto;
+  margin-bottom: 60px;
   padding: 0;
   width: 100%;
   height: 400px;
   max-width: 480px;
 }
+.banner__title {
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 42px;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: white;
+  padding-top: 118px;
+  padding-left: 58px;
+  padding-right: 57px;
+}
 
 .button {
   text-align: center;
   border: none;
-  cursor: pointer;
   font-size: 16px;
   border-radius: 4px;
   background-color: #2196f3;
@@ -180,87 +207,29 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.button:hover, .button:focus {
-  background-color: #2196f3;
-  color: white;
-  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-.button--categories {
-  font-weight: 500;
-  line-height: 1.625em;
-  background-color: #f5f4fa;
-  color: #212121;
-  letter-spacing: 0.03em;
-  padding: 6px 22px;
-}
 .button--banner {
   font-weight: 700;
   line-height: 1.875em;
   letter-spacing: 0.06em;
   color: white;
   background-color: #2196f3;
+  padding: 10px 41px;
   width: 200px;
   height: 50px;
-  margin-bottom: 200px;
-}
-.button--modal {
-  width: 200px;
-  height: 50px;
-  color: white;
-  background-color: #2196f3;
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  margin-top: 30px;
-  margin-left: 164px;
-  margin-right: 164px;
-  margin-bottom: 40px;
-}
-.button--modal-close {
-  position: absolute;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 30px;
-  height: 30px;
-  padding: 0;
-  top: 8px;
-  right: 8px;
-  background-color: white;
-  color: #212121;
-  border: 1px solid #afb1b8;
-  border-radius: 50%;
-}
-.button--newsletter {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  font-weight: 700;
-  width: 200px;
-  height: 50px;
-  gap: 24px;
+  margin: 30px 140px 118px;
 }
 
 .headline-h2 {
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   text-align: center;
   letter-spacing: 0.03em;
-  margin-bottom: 50px;
-  margin-top: 0;
-  padding-top: 0;
+  line-height: 33px;
+  margin-bottom: 30px;
+  padding-top: 60px;
+}
+.headline-h2--work {
+  display: none;
 }
 
 .headline-h3 {
@@ -301,6 +270,7 @@ body {
   margin-bottom: 10px;
   padding: 0;
   color: #212121;
+  text-align: center;
 }
 .headline-h5--footer {
   color: white;
@@ -310,7 +280,7 @@ body {
 .lorem {
   list-style: none;
   gap: 30px;
-  padding-bottom: 0;
+  padding-bottom: 30px;
 }
 .lorem__icon {
   width: 70px;
@@ -321,6 +291,100 @@ body {
   width: 100%;
   height: 120px;
 }
+.lorem__text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.5em;
+  letter-spacing: 0.03em;
+  margin-bottom: 30px;
+  color: #757575;
+}
+
+.work {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 auto;
+  gap: 30px;
+  display: none;
+}
+
+.work__img {
+  position: relative;
+  z-index: 1;
+}
+.work__img > .work__label {
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1em;
+  letter-spacing: 0.03em;
+  color: white;
+  position: absolute;
+  top: 226px;
+  margin: 0;
+  background: rgba(47, 48, 58, 0.8);
+  z-index: 2;
+}
+.work__img > .work__label--1 {
+  padding: 27px 90px;
+}
+.work__img > .work__label--2 {
+  padding: 27px 113px;
+  white-space: nowrap;
+}
+.work__img > .work__label--3 {
+  padding: 27px 94px;
+}
+
+.team {
+  background-color: #f5f4fa;
+  width: 100%;
+  height: 2761px;
+}
+.team__list {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 30px;
+}
+.team__item {
+  margin: 0 auto;
+  background-color: white;
+  margin-bottom: 30px;
+}
+.team__img {
+  width: 100%;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  margin: 0 auto;
+}
+.team__member {
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0 auto;
+}
+.team__job {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.1875em;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin: 0 auto;
+  padding-bottom: 16px;
+  color: #757575;
+}
 
 /* SOCIALS team & footer */
 .socials {
@@ -328,11 +392,20 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 10px;
   padding: 0;
 }
 .socials--team {
-  margin: 0 32px;
+  margin: 0 auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .socials--footer {
   margin-top: 12px;
@@ -482,6 +555,51 @@ body {
   padding: 0%;
   position: relative;
   z-index: 2;
+}
+
+.clients {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 30px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-preferred-size: calc((100% - 120px) / 4);
+      flex-basis: calc((100% - 120px) / 4);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  max-width: 480px;
+}
+
+.clients__link {
+  border: 1px solid #afb1b8;
+  fill: #afb1b8;
+  border-radius: 4px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 170px;
+  height: 92px;
+  -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.clients__link:hover, .clients__link:focus-within {
+  fill: #2196f3;
+  border-color: #2196f3;
 }
 
 .backdrop {
