--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -2,20 +2,32 @@
 
 //MOBILE
 
+
 .banner {
   background-color: $mainheadline-footer-color;
   background-image: linear-gradient($gradient, $gradient),
     url(../images/img-background-mobile@1x.jpg);
   background-size: contain;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   margin: 0 auto;
+  margin-bottom: 60px;
   padding: 0;
   width: 100%;
   height: 400px;
   max-width: 480px;
+
+    &__title {
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 42px;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: $button-text-color;
+    padding-top: 118px;
+    padding-left: 58px;
+    padding-right: 57px;
+  
+  }
 }
 
 // .banner {
