--- a/sass/components/_body.scss
+++ b/sass/components/_body.scss
@@ -7,6 +7,7 @@ body {
   font-style: normal;
   font-weight: 400;
   box-sizing: border-box;
+  max-width: 480xp;
   width: 100%;
   margin: 0 auto;
   padding: 0;
