--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,5 +1,36 @@
 @import "../utils/variables";
 
+
+.clients {
+  display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+  gap: 30px;
+  align-items: center;
+  flex-basis: calc((100% - 120px) / 4);
+ justify-content: center;
+ max-width: 480px;
+}
+
+.clients__link {
+  border: 1px solid $icons-color;
+  fill: $icons-color;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 170px;
+  height: 92px;
+  transition: border-color 250ms $transition-fn, fill 250ms $transition-fn;
+
+  &:hover,
+  &:focus-within {
+    fill: $button-backgroundnhover-color;
+    border-color: $button-backgroundnhover-color;
+  }
+}
+
+
 // .clients {
 //   list-style: none;
 //   display: flex;
