--- a/sass/components/_lorem.scss
+++ b/sass/components/_lorem.scss
@@ -5,7 +5,7 @@
 .lorem {
   list-style: none;
   gap: 30px;
-  padding-bottom: 0;
+  padding-bottom: 30px;
 
   &__icon {
     width: 70px;
@@ -16,6 +16,15 @@
     width: 100%;
     height: 120px;
   }
+
+  &__text {
+    font-weight: 400;
+  font-size: 14px;
+  line-height: 1.5em;
+  letter-spacing: 0.03em;
+  margin-bottom: 30px;
+  color: $contactncontent-text-color;
+}
 }
 
 // .lorem {
