--- a/sass/components/_resets.scss
+++ b/sass/components/_resets.scss
@@ -1,4 +1,4 @@
-// Box-sizing for whole website 
+// Box-sizing for whole website
 @import "../utils/variables";
 
 * {
@@ -7,23 +7,29 @@
   box-sizing: border-box;
 }
 
-// Container for header, body and footer 
+// Container for header, body and footer
 
 //MOBILE 480
 
-.container {    
+.container {
   max-width: 480px;
   padding: 0 15px;
   margin: 0 auto;
   align-items: center;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 @media screen and (min-width: 768px) {
   .container {
     max-width: 480px;
-  padding: 0 15px;
-  margin: 0 auto;
-  align-items: center;
+    padding: 0 15px;
+    margin: 0 auto;
+    align-items: center;
   }
 }
 
