--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -4,11 +4,14 @@
 .socials {
   list-style: none;
   display: flex;
+  align-items: center;
+  justify-content: center;
   gap: 10px;
   padding: 0;
 
   &--team {
-    margin: 0 32px;
+    margin: 0 auto;
+    align-items: center;
   }
 
   &--footer {
@@ -48,3 +51,52 @@
     background-color: $button-backgroundnhover-color;
   }
 }
+
+
+// .socials {
+//   list-style: none;
+//   display: flex;
+//   gap: 10px;
+//   padding: 0;
+
+//   &--team {
+//     margin: 0 32px;
+//   }
+
+//   &--footer {
+//     margin-top: 12px;
+//   }
+// }
+
+// .socials__link {
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   width: 44px;
+//   height: 44px;
+//   border-radius: 50px;
+//   transition: background-color 250ms $transition-fn, fill 250ms $transition-fn;
+
+//   &--team {
+//     background-position: 50%;
+//     margin-bottom: 30px;
+//     color: $icons-color;
+//     fill: $icons-color;
+//   }
+
+//   &--team:hover,
+//   &--team:focus {
+//     background-color: $button-backgroundnhover-color;
+//     fill: $button-text-color;
+//   }
+
+//   &--footer {
+//     fill: $button-text-color;
+//     background-color: rgba(255, 255, 255, 0.1);
+//   }
+
+//   &--footer:hover,
+//   &--footer:focus {
+//     background-color: $button-backgroundnhover-color;
+//   }
+// }
