--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,5 +1,49 @@
 @import "../utils/variables";
 
+//MOBILE
+
+.team {
+  background-color: $alternative-button-background-color;
+  width: 100%;
+  height: 2761px;
+
+  &__list {
+    align-items: center;
+    gap: 30px;
+  }
+
+  &__item {
+    margin: 0 auto;
+    background-color: $button-text-color;
+    margin-bottom: 30px;
+  }
+
+  &__img {
+    width: 100%;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    margin: 0 auto;
+  }
+
+  &__member {
+    text-align: center;
+    justify-content: center;
+    margin: 0 auto;
+  }
+
+  &__job {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.1875em;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin: 0 auto;
+    padding-bottom: 16px;
+    color: $contactncontent-text-color;
+  }
+}
+
 // .team {
 //   background-color: $alternative-button-background-color;
 //   width: 100%;
@@ -22,6 +66,10 @@
 //   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
 //     0px 2px 1px rgba(0, 0, 0, 0.2);
 //   border-radius: 0px 0px 4px 4px;
+// }
+
+// &__member {
+
 // }
 
 // &__job {
