--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -5,26 +5,29 @@
 .contact {
   list-style: none;
   display: flex;
-  visibility: hidden;
+  text-align: center;
+      justify-content: center;
 
   &__icon {
     margin-right: 10px;
     color: $contactncontent-text-color;
     fill: $contactncontent-text-color;
     transition: fill 250ms $transition-fn;
+    display: none;
   }
 
   &--header {
     gap: 50px;
     margin-left: auto;
+    display: none;
   }
 
   &--footer {
     flex-direction: column;
-    align-items: baseline;
-    gap: 9px;
-    margin: 9px 0;
-    padding: 0;
+     text-align: center;
+      justify-content: center;
+     gap: 8px;
+    margin: 8px 0;
   }
 }
 
@@ -53,8 +56,71 @@
 
   &--footer {
     font-weight: 400;
+    font-size: 14px;
     line-height: 1.5em;
     letter-spacing: 0.03em;
     color: $footer-text-color;
+    text-align: center;
+    justify-content: center;
+    margin: 0 auto;
   }
 }
+
+// .contact {
+//   list-style: none;
+//   display: flex;
+
+//   &__icon {
+//     margin-right: 10px;
+//     color: $contactncontent-text-color;
+//     fill: $contactncontent-text-color;
+//     transition: fill 250ms $transition-fn;
+//
+//   }
+
+//   &--header {
+//     gap: 50px;
+//     margin-left: auto;
+//
+//   }
+
+//   &--footer {
+//     flex-direction: column;
+//     align-items: baseline;
+//     gap: 9px;
+//     margin: 9px 0;
+//     padding: 0;
+//   }
+// }
+
+// .contact__link {
+//   text-decoration: none;
+//   font-size: 14px;
+//   transition: color 250ms $transition-fn;
+
+//   &:hover,
+//   &:focus {
+//     color: $button-backgroundnhover-color;
+//   }
+
+//   &--header:hover .contact__icon,
+//   &--header:focus .contact__icon {
+//     color: $button-backgroundnhover-color;
+//     fill: $button-backgroundnhover-color;
+//   }
+
+//   &--header {
+//     font-weight: 500;
+//     line-height: 1px;
+//     letter-spacing: 0.02em;
+//     color: $contactncontent-text-color;
+//   }
+
+//   &--footer {
+//     font-weight: 400;
+//     line-height: 1.5em;
+//     letter-spacing: 0.03em;
+//     color: $footer-text-color;
+
+//   }
+// }
