--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,11 @@ img {
 }
 .logo--footer > span {
   color: white;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0 auto;
 }
 
 .nav {
@@ -85,7 +90,7 @@ img {
   list-style: none;
   gap: 46px;
   margin-left: 93px;
-  visibility: hidden;
+  display: none;
 }
 
 .nav__link {
@@ -118,7 +123,10 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  visibility: hidden;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .contact__icon {
   margin-right: 10px;
@@ -126,22 +134,24 @@ img {
   fill: #757575;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: none;
 }
 .contact--header {
   gap: 50px;
   margin-left: auto;
+  display: none;
 }
 .contact--footer {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
-  gap: 9px;
-  margin: 9px 0;
-  padding: 0;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 8px;
+  margin: 8px 0;
 }
 
 .contact__link {
@@ -165,9 +175,15 @@ img {
 }
 .contact__link--footer {
   font-weight: 400;
+  font-size: 14px;
   line-height: 1.5em;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0 auto;
 }
 
 .banner {
@@ -577,6 +593,8 @@ img {
       -ms-flex-pack: center;
           justify-content: center;
   max-width: 480px;
+  padding: 0 15px;
+  margin-bottom: 60px;
 }
 
 .clients__link {
@@ -596,10 +614,40 @@ img {
   height: 92px;
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  max-width: 480px;
 }
 .clients__link:hover, .clients__link:focus-within {
   fill: #2196f3;
   border-color: #2196f3;
+}
+
+.footer {
+  background-color: #2f303a;
+  padding: 60px 0;
+}
+.footer__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  max-width: 100%;
+  margin: 0 auto;
+}
+.footer__address {
+  font-style: normal;
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: 0.03em;
+  margin-top: 20px;
+  color: white;
+  white-space: nowrap;
 }
 
 .backdrop {
