--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -5,7 +5,7 @@
   list-style: none;
   gap: 46px;
   margin-left: 93px;
-  visibility: hidden;
+  display: none;
 }
   .nav__link {
     text-decoration: none;
