--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -6,7 +6,7 @@
   list-style: none;
   display: flex;
   text-align: center;
-      justify-content: center;
+  justify-content: center;
 
   &__icon {
     margin-right: 10px;
@@ -24,10 +24,11 @@
 
   &--footer {
     flex-direction: column;
-     text-align: center;
-      justify-content: center;
-     gap: 8px;
+    text-align: center;
+    justify-content: center;
+    gap: 8px;
     margin: 8px 0;
+    padding: 0;
   }
 }
 
@@ -63,6 +64,7 @@
     text-align: center;
     justify-content: center;
     margin: 0 auto;
+    padding: 0;
   }
 }
 
