--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -8,6 +8,8 @@
   align-items: center;
   height: 60px;
   margin: auto;
+  gap: 100px;
+  justify-content: space-between;
 }
 
 .header-bottomline {
