--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,10 @@ img {
           align-items: center;
   height: 60px;
   margin: auto;
+  gap: 100px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .header-bottomline {
@@ -73,6 +77,8 @@ img {
 }
 .logo--header > span {
   color: black;
+  padding: 0;
+  margin: 0 auto;
 }
 .logo--footer > span {
   color: white;
