--- a/sass/components/_headlines.scss
+++ b/sass/components/_headlines.scss
@@ -16,6 +16,27 @@
   }
 }
 
+.headline-h5 {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1em;
+  letter-spacing: 0.03em;
+
+  &--lorem {
+    margin-top: 30px;
+    margin-bottom: 10px;
+    padding: 0;
+    color: $main-text-color;
+    text-align: center;
+  }
+
+  &--footer {
+    color: $button-text-color;
+    margin-top: 60px;
+    margin-bottom: 20px;
+  }
+}
 
 
 // .headline-h2 {
@@ -58,23 +79,23 @@
   color: $main-text-color;
 }
 
-.headline-h5 {
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1em;
-  letter-spacing: 0.03em;
+// .headline-h5 {
+//   text-transform: uppercase;
+//   font-weight: 700;
+//   font-size: 14px;
+//   line-height: 1em;
+//   letter-spacing: 0.03em;
 
-  &--lorem {
-    margin-top: 30px;
-    margin-bottom: 10px;
-    padding: 0;
-    color: $main-text-color;
-    text-align: center;
-  }
+//   &--lorem {
+//     margin-top: 30px;
+//     margin-bottom: 10px;
+//     padding: 0;
+//     color: $main-text-color;
+//     text-align: center;
+//   }
 
-  &--footer {
-    color: $button-text-color;
-    margin-bottom: 20px;
-  }
-}
+//   &--footer {
+//     color: $button-text-color;
+//     margin-bottom: 20px;
+//   }
+// }
