--- a/css/main.css
+++ b/css/main.css
@@ -256,6 +256,26 @@ img {
   display: none;
 }
 
+.headline-h5 {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1em;
+  letter-spacing: 0.03em;
+}
+.headline-h5--lorem {
+  margin-top: 30px;
+  margin-bottom: 10px;
+  padding: 0;
+  color: #212121;
+  text-align: center;
+}
+.headline-h5--footer {
+  color: white;
+  margin-top: 60px;
+  margin-bottom: 20px;
+}
+
 .headline-h3 {
   font-weight: 700;
   font-size: 18px;
@@ -280,25 +300,6 @@ img {
   padding-top: 30px;
   padding-bottom: 10px;
   color: #212121;
-}
-
-.headline-h5 {
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1em;
-  letter-spacing: 0.03em;
-}
-.headline-h5--lorem {
-  margin-top: 30px;
-  margin-bottom: 10px;
-  padding: 0;
-  color: #212121;
-  text-align: center;
-}
-.headline-h5--footer {
-  color: white;
-  margin-bottom: 20px;
 }
 
 .lorem {
@@ -372,7 +373,7 @@ img {
 .team {
   background-color: #f5f4fa;
   width: 100%;
-  height: 2761px;
+  padding-bottom: 30px;
 }
 .team__list {
   -webkit-box-align: center;
@@ -450,10 +451,10 @@ img {
   border-radius: 50px;
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding-bottom: 24px;
 }
 .socials__link--team {
   background-position: 50%;
-  margin-bottom: 30px;
   color: #afb1b8;
   fill: #afb1b8;
 }
@@ -595,8 +596,8 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-preferred-size: calc((100% - 120px) / 4);
-      flex-basis: calc((100% - 120px) / 4);
+  -ms-flex-preferred-size: calc((100% - 30px) / 2);
+      flex-basis: calc((100% - 30px) / 2);
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
