--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -8,6 +8,7 @@
   justify-content: center;
   gap: 10px;
   padding: 0;
+  
 
   &--team {
     margin: 0 auto;
@@ -27,10 +28,11 @@
   height: 44px;
   border-radius: 50px;
   transition: background-color 250ms $transition-fn, fill 250ms $transition-fn;
+  padding-bottom: 24px;
 
   &--team {
     background-position: 50%;
-    margin-bottom: 30px;
+    
     color: $icons-color;
     fill: $icons-color;
   }
