--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -5,7 +5,7 @@
 .team {
   background-color: $alternative-button-background-color;
   width: 100%;
-  height: 2761px;
+  padding-bottom: 30px;
 
   &__list {
     align-items: center;
@@ -16,6 +16,7 @@
     margin: 0 auto;
     background-color: $button-text-color;
     margin-bottom: 30px;
+    
   }
 
   &__img {
