--- a/css/main.css
+++ b/css/main.css
@@ -424,7 +424,7 @@ img {
       -ms-flex-pack: center;
           justify-content: center;
   gap: 10px;
-  padding: 0;
+  padding: 0 0 24px 0;
 }
 .socials--team {
   margin: 0 auto;
@@ -451,7 +451,6 @@ img {
   border-radius: 50px;
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding-bottom: 24px;
 }
 .socials__link--team {
   background-position: 50%;
