--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -7,8 +7,7 @@
   align-items: center;
   justify-content: center;
   gap: 10px;
-  padding: 0;
-  
+  padding: 0 0 24px 0;
 
   &--team {
     margin: 0 auto;
@@ -28,11 +27,10 @@
   height: 44px;
   border-radius: 50px;
   transition: background-color 250ms $transition-fn, fill 250ms $transition-fn;
-  padding-bottom: 24px;
 
   &--team {
     background-position: 50%;
-    
+
     color: $icons-color;
     fill: $icons-color;
   }
@@ -53,7 +51,6 @@
     background-color: $button-backgroundnhover-color;
   }
 }
-
 
 // .socials {
 //   list-style: none;
