--- a/css/main.css
+++ b/css/main.css
@@ -205,6 +205,10 @@ img {
   width: 100%;
   height: 400px;
   max-width: 480px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-repeat: no-repeat;
 }
 .banner__title {
   font-weight: 900;
@@ -242,6 +246,52 @@ img {
   height: 50px;
   margin: 30px 140px 118px;
 }
+.button--modal {
+  width: 200px;
+  height: 50px;
+  color: white;
+  background-color: #2196f3;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  margin-top: 30px;
+  margin: 30px 125px 40px;
+}
+.button--modal-close {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 30px;
+  height: 30px;
+  padding: 0;
+  top: 8px;
+  right: 8px;
+  background-color: white;
+  color: #212121;
+  border: 1px solid #afb1b8;
+  border-radius: 50%;
+}
+.button--newsletter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-weight: 700;
+  width: 200px;
+  height: 50px;
+  gap: 24px;
+}
 
 .headline-h2 {
   font-weight: 700;
@@ -273,7 +323,7 @@ img {
 .headline-h5--footer {
   color: white;
   margin-top: 60px;
-  margin-bottom: 20px;
+  margin-bottom: 0;
 }
 
 .headline-h3 {
@@ -434,6 +484,7 @@ img {
 }
 .socials--footer {
   margin-top: 12px;
+  margin-bottom: 0;
 }
 
 .socials__link {
@@ -686,8 +737,8 @@ img {
 
 .modal {
   position: relative;
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
   background-color: white;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -710,12 +761,11 @@ img {
 .modal__header {
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.4375em;
+  line-height: 1.875em;
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
-  margin-top: 40px;
-  margin-bottom: 12px;
+  margin: 40px 40px 12px;
 }
 .modal__label {
   position: relative;
@@ -747,7 +797,7 @@ img {
 .modal__input {
   position: relative;
   outline: none;
-  width: 448px;
+  width: 370px;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -757,8 +807,8 @@ img {
 .modal__comment {
   resize: none;
   outline: none;
-  width: 448px;
-  height: 138px;
+  width: 370px;
+  height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding: 12px 16px;
@@ -771,7 +821,7 @@ img {
 .modal__icon {
   position: absolute;
   top: 40%;
-  left: 10%;
+  left: 12%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -784,10 +834,10 @@ img {
 .checkbox {
   position: relative;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 12px;
   margin-top: 20px;
-  margin-left: 55px;
-  margin-right: 54px;
+  margin-left: 50px;
+  margin-right: 40px;
   margin-bottom: 0;
   color: #757575;
 }
@@ -814,9 +864,10 @@ input:checked + .checkbox__icon {
 
 .checkbox__terms {
   font-weight: 400;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.5em;
   letter-spacing: 0.03em;
+  white-space: nowrap;
 }
 .checkbox__terms--link {
   color: #2196f3;
@@ -824,15 +875,27 @@ input:checked + .checkbox__icon {
 }
 
 .newsletter {
-  margin-left: auto;
+  margin: 0 auto;
 }
 .newsletter__form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0;
+  gap: 20px;
 }
 .newsletter__mail {
-  margin-right: 12px;
+  margin-right: 0 auto;
   border: 1px solid rgba(255, 255, 255, 0.3);
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
