--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -14,6 +14,10 @@
   width: 100%;
   height: 400px;
   max-width: 480px;
+  align-items: center;
+  background-repeat: no-repeat;
+
+  
 
     &__title {
     font-weight: 900;
