--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -20,7 +20,44 @@
     width: 200px;
     height: 50px;
     margin: 30px 140px 118px;
+  }
+
+     &--modal {
+  width: 200px;
+  height: 50px;
+  color: $button-text-color;
+  background-color: $button-backgroundnhover-color;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  margin-top: 30px;
+  margin: 30px 125px 40px;
+
+}
+
+&--modal-close {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  padding: 0;
+  top: 8px;
+  right: 8px;
+  background-color: $button-text-color;
+  color: $main-text-color;
+  border: 1px solid $icons-color;
+  border-radius: 50%;
+}
     
+  
+   &--newsletter {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 700;
+    width: 200px;
+    height: 50px;
+    gap: 24px;
   }
 }
 
