--- a/sass/components/_newsletter.scss
+++ b/sass/components/_newsletter.scss
@@ -1,14 +1,20 @@
 @import "../utils/variables";
 
 .newsletter {
-  margin-left: auto;
+margin: 0 auto;
 
 &__form {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+padding: 0;
+gap: 20px;
 }
 
 &__mail {
-  margin-right: 12px;
+  margin-right: 0 auto;
+
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
@@ -29,3 +35,33 @@
   letter-spacing: 0.06em;
 }
 }
+
+// .newsletter {
+//   margin-left: auto;
+
+// &__form {
+//   display: flex;
+// }
+
+// &__mail {
+//   margin-right: 12px;
+//   border: 1px solid rgba(255, 255, 255, 0.3);
+//   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+//   border-radius: 4px;
+//   background-color: $mainheadline-footer-color;
+//   width: 358px;
+//   height: 50px;
+//   padding-left: 16px;
+//   line-height: 1.25em;
+//   letter-spacing: 0.03em;
+//   color: rgba(255, 255, 255, 0.6);
+// }
+
+// &__textbutton {
+//   font-weight: 700;
+//   font-size: 16px;
+//   line-height: 1.875em;
+//   text-align: center;
+//   letter-spacing: 0.06em;
+// }
+// }
