--- a/sass/components/_resets.scss
+++ b/sass/components/_resets.scss
@@ -16,6 +16,12 @@
   padding: 0 15px;
   margin: 0 auto;
   align-items: center;
+ 
+}
+
+@mixin vert {
+  position: relative;
+  margin: 0;
 }
 
 img {
