--- a/css/main.css
+++ b/css/main.css
@@ -18,24 +18,25 @@ body {
           box-sizing: border-box;
 }
 
-.container {
-  max-width: 480px;
-  padding: 0 15px;
-  margin: 0 auto;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
 img {
   display: block;
   max-width: 100%;
   height: auto;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   .container {
     max-width: 480px;
+    padding: 0 15px;
+    margin: 0 auto;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .container {
+    max-width: 768px;
     padding: 0 15px;
     margin: 0 auto;
     -webkit-box-align: center;
@@ -194,6 +195,29 @@ img {
   padding: 0;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contact {
+    list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    text-align: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .contact__icon {
+    margin-right: 10px;
+    color: #757575;
+    fill: #757575;
+    -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .contact--header {
+    gap: 50px;
+    margin-left: auto;
+  }
+}
 .banner {
   background-color: #2f303a;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/img-background-mobile@1x.jpg);
@@ -233,6 +257,13 @@ img {
           align-items: center;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .banner {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/img-background-tablet@1x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-background-tablet@1x.jpg);
+    min-width: 768px;
+  }
+}
 .button {
   text-align: center;
   border: none;
