--- a/sass/components/_resets.scss
+++ b/sass/components/_resets.scss
@@ -7,10 +7,17 @@
   box-sizing: border-box;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 // Container for header, body and footer
 
 //MOBILE 480
 
+@media screen and (max-width: 768px) {
 .container {
   max-width: 480px;
   padding: 0 15px;
@@ -18,21 +25,12 @@
   align-items: center;
  
 }
-
-@mixin vert {
-  position: relative;
-  margin: 0;
 }
 
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .container {
-    max-width: 480px;
+    max-width: 768px;
     padding: 0 15px;
     margin: 0 auto;
     align-items: center;
