--- a/sass/components/_lorem.scss
+++ b/sass/components/_lorem.scss
@@ -13,17 +13,32 @@
     background-color: $alternative-button-background-color;
     text-align: center;
     width: 100%;
-    
   }
 
   &__text {
     font-weight: 400;
-  font-size: 14px;
-  line-height: 1.5em;
-  letter-spacing: 0.03em;
-  margin-bottom: 30px;
-  color: $contactncontent-text-color;
+    font-size: 14px;
+    line-height: 1.5em;
+    letter-spacing: 0.03em;
+    margin-bottom: 30px;
+    color: $contactncontent-text-color;
+  }
 }
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .lorem {
+    min-width: 768px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+
+    &__item {
+      display: flex;
+      flex-basis: calc((100% - 30px) / 2);
+      flex-wrap: wrap;
+      width: 100%;
+    }
+  }
 }
 
 // .lorem {
