--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,7 @@ img {
 
 @media screen and (max-width: 768px) {
   .container {
+    min-width: 320px;
     max-width: 480px;
     padding: 0 15px;
     margin: 0 auto;
@@ -141,7 +142,6 @@ img {
   fill: #757575;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: none;
 }
 .contact--header {
   gap: 50px;
@@ -162,6 +162,31 @@ img {
   padding: 0;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contact {
+    list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    text-align: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .contact__icon {
+    margin-right: 10px;
+    color: #757575;
+    fill: #757575;
+    -webkit-transition-property: fill;
+    transition-property: fill;
+    -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .contact--header {
+    gap: 50px;
+    margin-left: auto;
+  }
+}
 .contact__link {
   text-decoration: none;
   font-size: 14px;
@@ -195,29 +220,6 @@ img {
   padding: 0;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .contact {
-    list-style: none;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    text-align: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .contact__icon {
-    margin-right: 10px;
-    color: #757575;
-    fill: #757575;
-    -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .contact--header {
-    gap: 50px;
-    margin-left: auto;
-  }
-}
 .banner {
   background-color: #2f303a;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/img-background-mobile@1x.jpg);
@@ -413,6 +415,27 @@ img {
   color: #757575;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .lorem {
+    min-width: 768px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    width: 100%;
+  }
+  .lorem__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-preferred-size: calc((100% - 30px) / 2);
+        flex-basis: calc((100% - 30px) / 2);
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    width: 100%;
+  }
+}
 .work {
   list-style: none;
   display: -webkit-box;
@@ -499,6 +522,21 @@ img {
   color: #757575;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team {
+    min-width: 768px;
+  }
+  .team__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-preferred-size: calc((100% - 30px) / 2);
+        flex-basis: calc((100% - 30px) / 2);
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    width: 100%;
+  }
+}
 /* SOCIALS team & footer */
 .socials {
   list-style: none;
