--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -7,14 +7,16 @@
   display: flex;
   text-align: center;
   justify-content: center;
+  
 
   &__icon {
     margin-right: 10px;
     color: $contactncontent-text-color;
     fill: $contactncontent-text-color;
     transition: fill 250ms $transition-fn;
-    display: none;
+    
   }
+  
 
   &--header {
     gap: 50px;
@@ -29,6 +31,27 @@
     gap: 8px;
     margin: 8px 0;
     padding: 0;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contact {
+    list-style: none;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+
+    &__icon {
+      margin-right: 10px;
+      color: $contactncontent-text-color;
+      fill: $contactncontent-text-color;
+      transition-property: fill;
+      transition: fill 250ms $transition-fn;
+    }
+
+    &--header {
+      gap: 50px;
+      margin-left: auto;
+    }
   }
 }
 
@@ -68,26 +91,7 @@
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .contact {
-    list-style: none;
-    display: flex;
-    text-align: center;
-    justify-content: center;
 
-    &__icon {
-      margin-right: 10px;
-      color: $contactncontent-text-color;
-      fill: $contactncontent-text-color;
-      transition: fill 250ms $transition-fn;
-    }
-
-    &--header {
-      gap: 50px;
-      margin-left: auto;
-    }
-  }
-}
 
 // .contact {
 //   list-style: none;
