--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -6,19 +6,16 @@
   background-color: $alternative-button-background-color;
   width: 100%;
   padding-bottom: 30px;
-  
 
   &__list {
     align-items: center;
     gap: 30px;
-    
   }
 
   &__item {
     margin: 0 auto;
     background-color: $button-text-color;
     margin-bottom: 30px;
-    
   }
 
   &__img {
@@ -44,6 +41,19 @@
     margin: 0 auto;
     padding-bottom: 16px;
     color: $contactncontent-text-color;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team {
+    min-width: 768px;
+
+    &__item {
+      display: flex;
+      flex-basis: calc((100% - 30px) / 2);
+      flex-wrap: wrap;
+      width: 100%;
+    }
   }
 }
 
