--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -45,6 +45,15 @@
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .banner {
+    background-image: linear-gradient($gradient, $gradient),
+      url(../images/img-background@1x.jpg);
+    min-width: 1200px;
+    max-width: 1600px;
+  }
+}
+
 // .banner {
 //   background-color: $mainheadline-footer-color;
 //   background-image: linear-gradient($gradient, $gradient),
