--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -42,6 +42,7 @@
     background-image: linear-gradient($gradient, $gradient),
       url(../images/img-background-tablet@1x.jpg);
     min-width: 768px;
+    margin: 0;
   }
 }
 
