--- a/css/main.css
+++ b/css/main.css
@@ -126,6 +126,28 @@ img {
   border-radius: 2px;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    width: 100%;
+  }
+  .nav__link--active::after {
+    position: relative;
+    content: "";
+    display: block;
+    border-bottom: solid 4px #2196f3;
+    width: 53px;
+    height: 4px;
+    top: 30px;
+    border-radius: 2px;
+  }
+}
 .contact {
   list-style: none;
   display: -webkit-box;
@@ -535,7 +557,6 @@ img {
     min-width: 768px;
   }
   .team__list {
-    min-width: 768px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
