--- a/sass/components/_body.scss
+++ b/sass/components/_body.scss
@@ -12,3 +12,11 @@ body {
   margin: 0 auto;
   padding: 0;
 }
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  body {
+  min-width: 768px;
+  max-width: 1199px;
+  width: 100%;
+}
+}
