--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -12,10 +12,27 @@
   justify-content: space-between;
 }
 
-.header-bottomline {
+&-bottomline {
   border-bottom: 1px solid $headline-bottom-line;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+.header-container {
+  min-width: 768px;
+  max-width: 1199px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 0 auto;
+  justify-content: space-between;
+  width: 100%;
+}
+
+&-bottomline {
+  border-bottom: 1px solid $headline-bottom-line;
+  width: 100%;
+}
+}
 
 // .header-container {
 //   display: flex;
