--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -27,6 +27,10 @@
 }
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  
+}
+
 // .logo {
 //   font-family: $secondary-font;
 //   text-decoration: none;
