--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,13 @@ body {
   padding: 0;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  body {
+    min-width: 768px;
+    max-width: 1199px;
+    width: 100%;
+  }
+}
 * {
   list-style: none;
   text-decoration: none;
@@ -68,6 +75,33 @@ img {
   border-bottom: 1px solid #ececec;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .header-container {
+    min-width: 768px;
+    max-width: 1199px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin: 0;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 100%;
+  }
+  .header-bottomline {
+    border-bottom: 1px solid #ececec;
+    width: 100%;
+  }
+}
 .logo {
   font-family: "Raleway", sans-serif;
   text-decoration: none;
@@ -80,7 +114,7 @@ img {
 .logo--header > span {
   color: black;
   padding: 0;
-  margin: 0 auto;
+  margin: 0;
 }
 .logo--footer > span {
   color: white;
@@ -88,7 +122,7 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin: 0 auto;
+  margin: 0;
 }
 
 .nav {
@@ -133,9 +167,16 @@ img {
     display: flex;
     list-style: none;
     margin: 0;
-    padding-top: 32px;
-    padding-bottom: 32px;
     width: 100%;
+    padding: 32px 0;
+    -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .nav__link {
+    margin: 0;
+  }
+  .nav__link:hover, .nav__link:focus {
+    color: #2196f3;
   }
   .nav__link--active::after {
     position: relative;
@@ -144,7 +185,7 @@ img {
     border-bottom: solid 4px #2196f3;
     width: 53px;
     height: 4px;
-    top: 30px;
+    top: 22px;
     border-radius: 2px;
   }
 }
@@ -190,10 +231,12 @@ img {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    text-align: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 0;
+    padding: 0;
   }
   .contact__icon {
     margin-right: 10px;
@@ -205,8 +248,7 @@ img {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .contact--header {
-    gap: 50px;
-    margin-left: auto;
+    margin: 0;
   }
 }
 .contact__link {
@@ -214,6 +256,8 @@ img {
   font-size: 14px;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 0;
+  margin: 0;
 }
 .contact__link:hover, .contact__link:focus {
   color: #2196f3;
@@ -227,6 +271,8 @@ img {
   line-height: 1px;
   letter-spacing: 0.02em;
   color: #757575;
+  margin: 0;
+  padding: 0;
 }
 .contact__link--footer {
   font-weight: 400;
@@ -286,6 +332,7 @@ img {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/img-background-tablet@1x.jpg);
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-background-tablet@1x.jpg);
     min-width: 768px;
+    margin: 0;
   }
 }
 @media screen and (min-width: 1200px) {
