--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -37,9 +37,9 @@
   .contact {
     list-style: none;
     display: flex;
-    text-align: center;
-    justify-content: center;
+    flex-direction: column;
     margin: 0;
+    padding: 0;
 
     &__icon {
       margin-right: 10px;
@@ -50,8 +50,6 @@
     }
 
     &--header {
-      gap: 50px;
-      margin-left: auto;
       margin: 0;
     }
   }
@@ -61,6 +59,8 @@
   text-decoration: none;
   font-size: 14px;
   transition: color 250ms $transition-fn;
+  padding: 0;
+  margin: 0;
 
   &:hover,
   &:focus {
@@ -79,6 +79,7 @@
     letter-spacing: 0.02em;
     color: $contactncontent-text-color;
     margin: 0;
+    padding: 0;
   }
 
   &--footer {
