--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -19,18 +19,15 @@
 @media screen and (min-width: 768px) and (max-width: 1199px) {
 .header-container {
   min-width: 768px;
-  max-width: 1199px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
   margin: 0;
   padding-top: 32px;
   padding-bottom: 32px;
-  justify-content: space-between;
   width: 100%;
 }
 
 .header-bottomline {
+  min-width: 768px;
+  margin: 0;
   border-bottom: 1px solid $headline-bottom-line;
   width: 100%;
 }
