--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,7 @@ img {
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .header-container {
     min-width: 768px;
+    max-width: 1199px;
     margin: 0;
     padding-top: 32px;
     padding-bottom: 32px;
@@ -324,7 +325,7 @@ img {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/img-background-tablet@1x.jpg);
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-background-tablet@1x.jpg);
     min-width: 768px;
-    margin: 0;
+    max-width: 1199px;
   }
 }
 @media screen and (min-width: 1200px) {
