--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -19,6 +19,7 @@
 @media screen and (min-width: 768px) and (max-width: 1199px) {
 .header-container {
   min-width: 768px;
+  max-width: 1199px;
   margin: 0;
   padding-top: 32px;
   padding-bottom: 32px;
