--- a/css/main.css
+++ b/css/main.css
@@ -5,19 +5,13 @@ body {
   font-weight: 400;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  max-width: 480xp;
+  min-width: 320px;
+  max-width: 1600xp;
   width: 100%;
   margin: 0 auto;
   padding: 0;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  body {
-    min-width: 768px;
-    max-width: 1199px;
-    width: 100%;
-  }
-}
 * {
   list-style: none;
   text-decoration: none;
@@ -66,6 +60,8 @@ img {
   height: 60px;
   margin: auto;
   gap: 100px;
+  max-width: 1600px;
+  width: 100%;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -77,12 +73,8 @@ img {
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .header-container {
-    min-width: 768px;
-    max-width: 1199px;
-    margin: 0;
     padding-top: 32px;
     padding-bottom: 32px;
-    width: 100%;
   }
   .header-bottomline {
     min-width: 768px;
@@ -103,7 +95,7 @@ img {
 .logo--header > span {
   color: black;
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
 }
 .logo--footer > span {
   color: white;
@@ -295,7 +287,7 @@ img {
   padding: 0;
   width: 100%;
   max-height: 400px;
-  max-width: 480px;
+  max-width: 1600px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -324,8 +316,6 @@ img {
   .banner {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/img-background-tablet@1x.jpg);
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-background-tablet@1x.jpg);
-    min-width: 768px;
-    max-width: 1199px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -468,12 +458,16 @@ img {
   list-style: none;
   gap: 30px;
   padding-bottom: 30px;
+  max-width: 1600px;
+  width: 100%;
+  margin: auto;
 }
 .lorem__icon {
   width: 70px;
   padding: 25px 0;
   background-color: #f5f4fa;
   text-align: center;
+  max-width: 1600px;
   width: 100%;
 }
 .lorem__text {
@@ -556,31 +550,34 @@ img {
   background-color: #f5f4fa;
   width: 100%;
   padding-bottom: 30px;
+  max-width: 1600px;
+  margin: auto;
 }
 .team__list {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   gap: 30px;
+  width: 100%;
 }
 .team__item {
-  margin: 0 auto;
   background-color: white;
   margin-bottom: 30px;
+  width: 100%;
 }
 .team__img {
   width: 100%;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  margin: 0 auto;
+  margin: auto;
 }
 .team__member {
   text-align: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin: 0 auto;
+  margin: auto;
 }
 .team__job {
   font-weight: 400;
@@ -588,36 +585,27 @@ img {
   line-height: 1.1875em;
   text-align: center;
   letter-spacing: 0.03em;
-  margin: 0 auto;
+  margin: auto;
   padding-bottom: 16px;
   color: #757575;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  .team {
-    min-width: 768px;
-  }
   .team__list {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    width: 100%;
   }
   .team__item {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin: 0 auto;
     -ms-flex-preferred-size: calc((100% - 30px) / 2);
         flex-basis: calc((100% - 30px) / 2);
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    width: 100%;
   }
 }
 /* SOCIALS team & footer */
@@ -839,6 +827,18 @@ img {
   border-color: #2196f3;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .clients {
+    -ms-flex-preferred-size: calc((100% - 30px) / 2);
+        flex-basis: calc((100% - 30px) / 2);
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    min-width: 768px;
+    padding: 0 15px;
+    margin-bottom: 60px;
+  }
+}
 .footer {
   background-color: #2f303a;
   padding: 60px 0;
@@ -868,6 +868,23 @@ img {
   white-space: nowrap;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    text-align: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    max-width: 100%;
+    margin: 0 auto;
+  }
+}
 .backdrop {
   display: -webkit-box;
   display: -ms-flexbox;
