--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -32,6 +32,16 @@
   }
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .clients {
+   flex-basis: calc((100% - 30px) / 2);
+  justify-content: center;
+  min-width: 768px;
+  padding: 0 15px;
+  margin-bottom: 60px;
+  }
+}
+
 // .clients {
 //   list-style: none;
 //   display: flex;
