--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -29,6 +29,17 @@
   }
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+   .footer__container {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    justify-content: center;
+    max-width: 100%;
+    margin: 0 auto;
+  }
+}
+
 // .footer {
 //   background-color: $mainheadline-footer-color;
 //   padding: 60px 0;
