--- a/css/main.css
+++ b/css/main.css
@@ -630,8 +630,8 @@ img {
           align-items: center;
 }
 .socials--footer {
-  margin-top: 12px;
-  margin-bottom: 0;
+  padding-top: 12px;
+  padding-bottom: 0;
 }
 
 .socials__link {
@@ -667,6 +667,11 @@ img {
   background-color: #2196f3;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .socials--footer {
+    padding-top: 20px;
+  }
+}
 .main-portfolio {
   background-color: white;
 }
@@ -877,12 +882,35 @@ img {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    text-align: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     max-width: 100%;
     margin: 0 auto;
+  }
+  .footer__info {
+    padding-left: 76px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .footer__address {
+    padding-bottom: 8px;
+  }
+  .footer__socials {
+    padding-right: 89px;
   }
 }
 .backdrop {
