--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -15,8 +15,8 @@
   }
 
   &--footer {
-    margin-top: 12px;
-    margin-bottom: 0;
+    padding-top: 12px;
+    padding-bottom: 0;
   }
 }
 
@@ -50,6 +50,15 @@
   &--footer:hover,
   &--footer:focus {
     background-color: $button-backgroundnhover-color;
+  }
+}
+
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .socials--footer {
+  padding-top: 20px;
+  
+
   }
 }
 
