--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   min-width: 320px;
-  max-width: 1600xp;
+  max-width: 1600px;
   width: 100%;
   margin: 0 auto;
   padding: 0;
@@ -46,6 +46,16 @@ img {
             align-items: center;
   }
 }
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+    padding: 0 215px;
+    margin: 0 auto;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
 .header-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -57,7 +67,7 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 60px;
+  height: 80px;
   margin: auto;
   gap: 100px;
   max-width: 1600px;
@@ -75,7 +85,6 @@ img {
   .header-container {
     padding-top: 32px;
     padding-bottom: 32px;
-    max-width: 768px;
     width: 100%;
   }
   .header-bottomline {
@@ -83,6 +92,22 @@ img {
     margin: 0;
     border-bottom: 1px solid #ececec;
     width: 100%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    height: 80px;
+    margin: auto;
   }
 }
 .logo {
@@ -115,6 +140,7 @@ img {
   list-style: none;
   gap: 46px;
   margin-left: 93px;
+  width: 100%;
   display: none;
 }
 
@@ -168,8 +194,25 @@ img {
     border-bottom: solid 4px #2196f3;
     width: 53px;
     height: 4px;
-    top: 22px;
+    top: 30px;
     border-radius: 2px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 0;
+    padding: 32px 0;
+    -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .nav__link {
+    margin: 0;
+  }
+  .nav__link:hover, .nav__link:focus {
+    color: #2196f3;
   }
 }
 .contact {
@@ -275,6 +318,65 @@ img {
   padding: 0;
 }
 
+@media screen and (min-width: 1200px) {
+  .contact {
+    list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    text-align: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .contact__icon {
+    margin-right: 10px;
+    color: #757575;
+    fill: #757575;
+    -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .contact--header {
+    padding: 0;
+  }
+  .contact--footer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    gap: 9px;
+    margin: 9px 0;
+    padding: 0;
+  }
+  .contact__link {
+    text-decoration: none;
+    font-size: 14px;
+    -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .contact__link:hover, .contact__link:focus {
+    color: #2196f3;
+  }
+  .contact__link--header:hover .contact__icon, .contact__link--header:focus .contact__icon {
+    color: #2196f3;
+    fill: #2196f3;
+  }
+  .contact__link--header {
+    font-weight: 500;
+    line-height: 1px;
+    letter-spacing: 0.02em;
+    color: #757575;
+  }
+  .contact__link--footer {
+    font-weight: 400;
+    line-height: 1.5em;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+  }
+}
 .banner {
   background-color: #2f303a;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/img-background-mobile@1x.jpg);
@@ -298,7 +400,7 @@ img {
 .banner__title {
   font-weight: 900;
   font-size: 26px;
-  line-height: 42px;
+  line-height: 1.36em;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
@@ -326,6 +428,11 @@ img {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-background@1x.jpg);
     min-width: 1200px;
     max-width: 1600px;
+    max-height: 600px;
+  }
+  .banner__title {
+    font-size: 44px;
+    line-height: 1.36em;
   }
 }
 .button {
