--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -7,16 +7,13 @@
   display: flex;
   text-align: center;
   justify-content: center;
-  
 
   &__icon {
     margin-right: 10px;
     color: $contactncontent-text-color;
     fill: $contactncontent-text-color;
     transition: fill 250ms $transition-fn;
-    
   }
-  
 
   &--header {
     gap: 50px;
@@ -53,7 +50,6 @@
     &--header {
       margin: 0;
       gap: 0;
-
     }
   }
 }
@@ -98,63 +94,62 @@
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .contact {
+    list-style: none;
+    display: flex;
 
+    text-align: center;
+    justify-content: center;
 
-// .contact {
-//   list-style: none;
-//   display: flex;
+    &__icon {
+      margin-right: 10px;
+      color: $contactncontent-text-color;
+      fill: $contactncontent-text-color;
+      transition: fill 250ms $transition-fn;
+    }
 
-//   &__icon {
-//     margin-right: 10px;
-//     color: $contactncontent-text-color;
-//     fill: $contactncontent-text-color;
-//     transition: fill 250ms $transition-fn;
-//
-//   }
+    &--header {
+      padding: 0;
+    }
 
-//   &--header {
-//     gap: 50px;
-//     margin-left: auto;
-//
-//   }
+    &--footer {
+      flex-direction: column;
+      align-items: baseline;
+      gap: 9px;
+      margin: 9px 0;
+      padding: 0;
+    }
+  }
 
-//   &--footer {
-//     flex-direction: column;
-//     align-items: baseline;
-//     gap: 9px;
-//     margin: 9px 0;
-//     padding: 0;
-//   }
-// }
+  .contact__link {
+    text-decoration: none;
+    font-size: 14px;
+    transition: color 250ms $transition-fn;
 
-// .contact__link {
-//   text-decoration: none;
-//   font-size: 14px;
-//   transition: color 250ms $transition-fn;
+    &:hover,
+    &:focus {
+      color: $button-backgroundnhover-color;
+    }
 
-//   &:hover,
-//   &:focus {
-//     color: $button-backgroundnhover-color;
-//   }
+    &--header:hover .contact__icon,
+    &--header:focus .contact__icon {
+      color: $button-backgroundnhover-color;
+      fill: $button-backgroundnhover-color;
+    }
 
-//   &--header:hover .contact__icon,
-//   &--header:focus .contact__icon {
-//     color: $button-backgroundnhover-color;
-//     fill: $button-backgroundnhover-color;
-//   }
+    &--header {
+      font-weight: 500;
+      line-height: 1px;
+      letter-spacing: 0.02em;
+      color: $contactncontent-text-color;
+    }
 
-//   &--header {
-//     font-weight: 500;
-//     line-height: 1px;
-//     letter-spacing: 0.02em;
-//     color: $contactncontent-text-color;
-//   }
-
-//   &--footer {
-//     font-weight: 400;
-//     line-height: 1.5em;
-//     letter-spacing: 0.03em;
-//     color: $footer-text-color;
-
-//   }
-// }
+    &--footer {
+      font-weight: 400;
+      line-height: 1.5em;
+      letter-spacing: 0.03em;
+      color: $footer-text-color;
+    }
+  }
+}
