--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  height: 60px;
+  height: 80px;
   margin: auto;
   gap: 100px;
   max-width: 1600px;
@@ -22,7 +22,6 @@
   .header-container {
     padding-top: 32px;
     padding-bottom: 32px;
-    max-width: 768px;
     width: 100%;
   }
 
@@ -34,15 +33,16 @@
   }
 }
 
-// .header-container {
-//   display: flex;
-//   flex-direction: row;
-//   align-items: center;
-//   height: 80px;
-//   padding-right: 27px;
-//   margin: auto;
-// }
+@media screen and (min-width: 1200px) {
 
-// .header-bottomline {
-//   border-bottom: 1px solid $headline-bottom-line;
-// }
+  .header-container {
+  display: flex;
+  flex-direction: row;
+
+  align-items: center;
+  height: 80px;
+  margin: auto;
+}
+}
+
+
