--- a/sass/components/_resets.scss
+++ b/sass/components/_resets.scss
@@ -24,7 +24,6 @@ img {
   padding: 0 15px;
   margin: 0 auto;
   align-items: center;
- 
 }
 }
 
@@ -33,6 +32,15 @@ img {
   .container {
     max-width: 768px;
     padding: 0 15px;
+    margin: 0 auto;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+    padding: 0 215px;
     margin: 0 auto;
     align-items: center;
   }
