--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ img {
 @media screen and (min-width: 1200px) {
   .container {
     max-width: 1200px;
-    padding: 0 215px;
+    padding: 0 15px;
     margin: 0 auto;
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -83,9 +83,7 @@ img {
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .header-container {
-    padding-top: 32px;
-    padding-bottom: 32px;
-    width: 100%;
+    margin: auto;
   }
   .header-bottomline {
     min-width: 768px;
@@ -106,7 +104,6 @@ img {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    height: 80px;
     margin: auto;
   }
 }
@@ -122,7 +119,7 @@ img {
 .logo--header > span {
   color: black;
   padding: 0;
-  margin: 0 auto;
+  margin: 0;
 }
 .logo--footer > span {
   color: white;
@@ -133,14 +130,12 @@ img {
   margin: 0;
 }
 
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+  }
+}
 .nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  list-style: none;
-  gap: 46px;
-  margin-left: 93px;
-  width: 100%;
   display: none;
 }
 
@@ -175,14 +170,16 @@ img {
     display: -ms-flexbox;
     display: flex;
     list-style: none;
-    margin: 0;
+    gap: 46px;
+    margin-left: 93px;
     width: 100%;
+    margin: 0;
     padding: 32px 0;
     -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .nav__link {
-    margin: 0;
+    margin-left: auto;
   }
   .nav__link:hover, .nav__link:focus {
     color: #2196f3;
@@ -203,16 +200,7 @@ img {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin: 0;
-    padding: 32px 0;
-    -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .nav__link {
-    margin: 0;
-  }
-  .nav__link:hover, .nav__link:focus {
-    color: #2196f3;
+    gap: 46px;
   }
 }
 .contact {
@@ -224,6 +212,7 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding: 0;
 }
 .contact__icon {
   margin-right: 10px;
@@ -236,6 +225,7 @@ img {
   gap: 50px;
   margin-left: auto;
   display: none;
+  padding: 0;
 }
 .contact--footer {
   -webkit-box-orient: vertical;
@@ -265,8 +255,6 @@ img {
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start;
-    margin: 0;
-    padding: 0;
   }
   .contact__icon {
     color: #757575;
@@ -320,24 +308,20 @@ img {
 
 @media screen and (min-width: 1200px) {
   .contact {
-    list-style: none;
+    max-width: 1600px;
+    width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    text-align: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
   }
   .contact__icon {
-    margin-right: 10px;
     color: #757575;
     fill: #757575;
     -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .contact--header {
-    padding: 0;
   }
   .contact--footer {
     -webkit-box-orient: vertical;
@@ -356,19 +340,6 @@ img {
     font-size: 14px;
     -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .contact__link:hover, .contact__link:focus {
-    color: #2196f3;
-  }
-  .contact__link--header:hover .contact__icon, .contact__link--header:focus .contact__icon {
-    color: #2196f3;
-    fill: #2196f3;
-  }
-  .contact__link--header {
-    font-weight: 500;
-    line-height: 1px;
-    letter-spacing: 0.02em;
-    color: #757575;
   }
   .contact__link--footer {
     font-weight: 400;
@@ -608,6 +579,28 @@ img {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     width: 100%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .lorem {
+    max-width: 1600px;
+    width: 100%;
+    margin: auto;
+    list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 30px;
+    padding-bottom: 0;
+  }
+  .lorem__icon {
+    max-width: 1600px;
+    width: 100%;
+    margin: auto;
+    width: 270px;
+    height: 120px;
+    background-color: #f5f4fa;
+    padding: 25px 100px;
   }
 }
 .work {
