--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -20,9 +20,7 @@
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .header-container {
-    padding-top: 32px;
-    padding-bottom: 32px;
-    width: 100%;
+    margin: auto;
   }
 
   .header-bottomline {
@@ -38,9 +36,7 @@
   .header-container {
   display: flex;
   flex-direction: row;
-
   align-items: center;
-  height: 80px;
   margin: auto;
 }
 }
