--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -16,7 +16,7 @@
 &--header > span {
   color: $menu-text-color;
   padding: 0;
-  margin: 0 auto;
+  margin: 0;
 }
 
 &--footer > span {
@@ -27,25 +27,8 @@
 }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-
+@media screen and (min-width: 1200px)  {
+.logo {
+  font-size: 26px;
 }
-
-// .logo {
-//   font-family: $secondary-font;
-//   text-decoration: none;
-//   font-weight: 700;
-//   font-size: 26px;
-//   line-height: 1.9375em;
-//   letter-spacing: 0.03em;
-//   color: $button-backgroundnhover-color;
-
-
-// &--header > span {
-//   color: $menu-text-color;
-// }
-
-// &--footer > span {
-//   color: $button-text-color;
-// }
-// }
+}
