--- a/sass/components/_lorem.scss
+++ b/sass/components/_lorem.scss
@@ -7,8 +7,8 @@
   gap: 30px;
   padding-bottom: 30px;
   max-width: 1600px;
-    width: 100%;
-    margin: auto;
+  width: 100%;
+  margin: auto;
 
   &__icon {
     width: 70px;
@@ -46,24 +46,24 @@
   }
 }
 
-// .lorem {
-//   list-style: none;
-//   display: flex;
-//   gap: 30px;
-//   padding-bottom: 0;
+@media screen and (min-width: 1200px) {
+  .lorem {
+    max-width: 1600px;
+    width: 100%;
+    margin: auto;
+    list-style: none;
+    display: flex;
+    gap: 30px;
+    padding-bottom: 0;
 
-// &__icon {
-//   width: 270px;
-//   height: 120px;
-//   background-color: $alternative-button-background-color;
-//   padding: 25px 100px;
-// }
-
-// &__text {
-//   font-size: 14px;
-//   line-height: 1.5em;
-//   letter-spacing: 0.03em;
-//   margin: 0;
-//   color: $contactncontent-text-color;
-// }
-// }
+    &__icon {
+      max-width: 1600px;
+      width: 100%;
+      margin: auto;
+      width: 270px;
+      height: 120px;
+      background-color: $alternative-button-background-color;
+      padding: 25px 100px;
+    }
+  }
+}
