--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -1,11 +1,6 @@
 @import "../utils/variables";
 
 .nav {
-  display: flex;
-  list-style: none;
-  gap: 46px;
-  margin-left: 93px;
-  width: 100%;
   display: none;
 }
   .nav__link {
@@ -40,17 +35,18 @@
 @media screen and (min-width: 768px) and (max-width: 1199px)
  {
   .nav {
-  display: flex;
+ display: flex;
   list-style: none;
-  margin: 0;
+  gap: 46px;
+  margin-left: 93px;
   width: 100%;
+  margin: 0;
   padding: 32px 0;
   transition: color 250ms $transition-fn;
 }
 
 .nav__link {
-  margin: 0;
-  
+  margin-left: auto;
    &:hover,
   &:focus {
     color: $button-backgroundnhover-color;
@@ -66,7 +62,6 @@
     top: 30px;
     border-radius: 2px;
   }
-
 }
 }
 
@@ -74,17 +69,7 @@
 
    .nav {
   display: flex;
-  margin: 0;
-  padding: 32px 0;
-  transition: color 250ms $transition-fn;
+  gap: 46px;
+ 
 }
-
-.nav__link {
-  margin: 0;
-  
-   &:hover,
-  &:focus {
-    color: $button-backgroundnhover-color;
-  }
-  }
 }
